Fixes narrow layout bug in .sidebar-wrapper.
Increases .sidebar-wrapper to fill the full width of the allotted space. Also clarifies the proper margins.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -209,8 +209,8 @@
 	}
 	
 	@media screen and (min-width: 70em){
-		margin-left: 2%;
-		width: 24.571428571429%;  //2/7
+		margin: 0 2%;
+		width: 26.571428571429%;  //2/7
 	}
 }
 
